[package]
name = "liberty"
version = "0.1.0"
authors = ["luxyva <luxyva@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.4.0", features = [  "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json", "mysql" ] }
log = "0.4.11"
anyhow = "1.0.34"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
json5 = "0.3.0"
url = "2.2.0"
serde_qs = "0.7.0"
nonblock-logger = { version = "0.1.5", default-features = false, features = ["color", "dbg"] }
async-trait = "0.1.42"
futures = "0.3.8"
actix-rt = "1.1.1"
structopt = "0.3.21"